fixing spacing for mobile and font darkness

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -36,7 +36,7 @@ $purple: #B509AC;
 
 $grey-color-dark: #333;   /* footer */
 $grey-color-light: #ddd;  /* navigation bar border */
-$text-color:     #666;
+$text-color:     #444;
 
 /* Set theme color *************************/
 $theme-color:   $blue;
