--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -55,9 +55,9 @@ line-height: $nav-height;
 .page-link{
 line-height: $base-line-height;
         // Gaps between nav items, but not on the first one
-&:not(:first-child) {
+//&:not(:first-child) {
 margin-left: 10px;
-        }
+      //  }
     }
 @include media-query($on-palm) {
 position: fixed;
@@ -88,7 +88,8 @@ display: line;
     z-index: 25;
     h1{
         color: #000;
-        font-size:75px;
+        font-size:65px;
+        line-height: 65px;
         font-weight: bold;
     }
     h2{
@@ -96,6 +97,7 @@ display: line;
         font-size:18px;
         font-weight:light;
         text-transform: uppercase;
+        line-height: 25px;
         margin-top: 15px; 
     }
     p{
